src/output.txt
In file included from parser.c:8:
parser.h:46:17: error: unknown type name ‘function_list_t’
   46 |                 function_list_t function_list;
      |                 ^~~~~~~~~~~~~~~
parser.h:48:17: error: unknown type name ‘function_t’
   48 |                 function_t function;
      |                 ^~~~~~~~~~
parser.h:50:17: error: unknown type name ‘statement_list_t’
   50 |                 statement_list_t statement_list;
      |                 ^~~~~~~~~~~~~~~~
parser.h:52:17: error: unknown type name ‘statement_t’
   52 |                 statement_t statement;
      |                 ^~~~~~~~~~~
parser.h:54:17: error: unknown type name ‘keyword_t’
   54 |                 keyword_t keyword;
      |                 ^~~~~~~~~
parser.h:56:17: error: unknown type name ‘binary_expression_t’
   56 |                 binary_expression_t binary_expression;
      |                 ^~~~~~~~~~~~~~~~~~~
parser.h:58:17: error: unknown type name ‘primary_t’
   58 |                 primary_t primary;
      |                 ^~~~~~~~~
parser.c: In function ‘build_ast’:
parser.c:82:9: error: unknown type name ‘token_stack_node’; use ‘struct’ keyword to refer to the type
   82 |         token_stack_node** curr = token_stack(cF, lc);
      |         ^~~~~~~~~~~~~~~~
      |         struct 
parser.c:82:51: error: incompatible type for argument 2 of ‘token_stack’
   82 |         token_stack_node** curr = token_stack(cF, lc);
      |                                                   ^~
      |                                                   |
      |                                                   pos_t {aka struct pos}
parser.h:201:48: note: expected ‘int *’ but argument is of type ‘pos_t’ {aka ‘struct pos’}
  201 | token_stack_node_t* token_stack(FILE* cF, int* lc);
      |                                           ~~~~~^~
parser.c:84:38: error: passing argument 1 of ‘application’ from incompatible pointer type [-Wincompatible-pointer-types]
   84 |         ast_node_t ast = application(curr);
      |                                      ^~~~
      |                                      |
      |                                      int **
parser.h:225:45: note: expected ‘token_stack_node_t **’ {aka ‘struct token_stack_node **’} but argument is of type ‘int **’
  225 | ast_node_t application(token_stack_node_t** curr);
      |                        ~~~~~~~~~~~~~~~~~~~~~^~~~
parser.c: In function ‘token_stack’:
parser.c:140:41: error: passing argument 2 of ‘next_token’ from incompatible pointer type [-Wincompatible-pointer-types]
  140 |         *(curr->token) = next_token(cF, lc);
      |                                         ^~
      |                                         |
      |                                         int *
In file included from parser.c:7:
lexer.h:51:37: note: expected ‘pos_t *’ {aka ‘struct pos *’} but argument is of type ‘int *’
   51 | token_t next_token(FILE* cF, pos_t* lc);
      |                              ~~~~~~~^~
parser.c:153:49: error: passing argument 2 of ‘next_token’ from incompatible pointer type [-Wincompatible-pointer-types]
  153 |                 *(curr->token) = next_token(cF, lc);
      |                                                 ^~
      |                                                 |
      |                                                 int *
lexer.h:51:37: note: expected ‘pos_t *’ {aka ‘struct pos *’} but argument is of type ‘int *’
   51 | token_t next_token(FILE* cF, pos_t* lc);
      |                              ~~~~~~~^~
parser.c: In function ‘function_list’:
parser.c:181:44: error: request for member ‘vector_tree’ in something not a structure or union
  181 |         function_list_node.as.function_list.vector_tree = init_vector_tree();
      |                                            ^
parser.c:190:78: error: request for member ‘vector_tree’ in something not a structure or union
  190 |                 vec_node_add_right_child(&function_list_node.as.function_list.vector_tree, function_node);
      |                                                                              ^
parser.c: In function ‘function’:
parser.c:204:34: error: request for member ‘function_prototype’ in something not a structure or union
  204 |         function_node.as.function.function_prototype = function_prototype(curr);
      |                                  ^
parser.c:208:34: error: request for member ‘statement_list’ in something not a structure or union
  208 |         function_node.as.function.statement_list = statement_list_node.as.statement_list;
      |                                  ^
parser.c: In function ‘statement_list’:
parser.c:255:46: error: request for member ‘vector_tree’ in something not a structure or union
  255 |         statement_list_node.as.statement_list.vector_tree = init_vector_tree();
      |                                              ^
parser.c:260:80: error: request for member ‘vector_tree’ in something not a structure or union
  260 |                 vec_node_add_right_child(&statement_list_node.as.statement_list.vector_tree, statement_var);
      |                                                                                ^
parser.c:266:88: error: request for member ‘vector_tree’ in something not a structure or union
  266 |                         vec_node_add_right_child(&statement_list_node.as.statement_list.vector_tree, statement_var);
      |                                                                                        ^
parser.c: In function ‘statement’:
parser.c:283:36: error: request for member ‘vector_tree’ in something not a structure or union
  283 |         statement_node.as.statement.vector_tree = init_vector_tree();
      |                                    ^
parser.c:300:70: error: request for member ‘vector_tree’ in something not a structure or union
  300 |                 vec_node_add_right_child(&statement_node.as.statement.vector_tree, keyword_node);
      |                                                                      ^
parser.c:306:62: error: request for member ‘vector_tree’ in something not a structure or union
  306 |         vec_node_add_right_child(&statement_node.as.statement.vector_tree, expression_var);
      |                                                              ^
parser.c: In function ‘term’:
parser.c:358:49: error: incompatible types when assigning to type ‘int’ from type ‘binary_expression_t’ {aka ‘struct binary_expression’}
  358 |                 new_left.as.binary_expression = (binary_expression_t){leftPtr, operator, rightPtr, primitive_type};
      |                                                 ^
parser.c: In function ‘primary’:
parser.c:405:39: error: request for member ‘type’ in something not a structure or union
  405 |                         ast.as.primary.type = PRIMARY_FUNC_CALL;
      |                                       ^
parser.c:406:39: error: request for member ‘as’ in something not a structure or union
  406 |                         ast.as.primary.as.func_call = (func_call_t){get_primitive_type(), (*curr)->token->string};
      |                                       ^
parser.c:421:31: error: request for member ‘type’ in something not a structure or union
  421 |                 ast.as.primary.type = PRIMARY_LITERAL;
      |                               ^
parser.c:425:31: error: request for member ‘as’ in something not a structure or union
  425 |                 ast.as.primary.as.literal.as.integer = value;
      |                               ^
